# 2D-KafkaGame

./: .gitignore  CLAUDE.md  Makefile  README.md  render.yaml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: main.ts  types.ts
client/src/config/: MapConfig.ts
client/src/entities/: Bullet.ts  Player.ts
client/src/network/: WebSocketClient.ts
client/src/scenes/: GameScene.ts  LobbyScene.ts  MenuScene.ts
client/src/ui/: HUD.ts
docs/: architecture.md  event_model.md  networking.md
infra/: game-topics.properties
infra/scripts/: consume-events.sh  setup-kafka.sh  start-kafka.sh  stop-kafka.sh
server/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml
server/app/: event_models.py  game_state.py  kafka_producer.py  main.py  match_service.py  websocket_server.py
server/services/: analytics_service.py  replay_service.py
server/tests/: test_event_models.py  test_game_state.py
