[tool.poetry]
name = "2d-kafka-game-server"
version = "0.1.0"
description = "FastAPI WebSocket game server with Kafka event streaming"
authors = ["Game Developer"]
readme = "README.md"
packages = [{include = "app"}, {include = "services"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
aiokafka = "^0.10.0"
websockets = "^12.0"
pydantic = "^2.5.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
